# advancedcalc

./: .gitmodules  CMakeLists.txt  CalcError.cpp  CalcError.h  Calculator.cpp  Calculator.h  Constants.cpp  Constants.h  Font.cpp  Font.h  FunctionType.h  Functions.cpp  Functions.h  Graph.cpp  Graph.h  Helper.cpp  Helper.h  Instruction.cpp  Instruction.h  InstructionVM.cpp  InstructionVM.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  TODO.md  TestGraphs.md  Token.cpp  Token.h  TokenList.cpp  TokenList.h  main.cpp
assets/fonts/: Inconsolata-Regular_22.json  RobotoMono-Regular_12.json  RobotoMono-Regular_14.json  RobotoMono-Regular_16.json  RobotoMono-Regular_22.json
assets/shaders/: atlas_text_bitmap_f.glsl  atlas_text_bitmap_v.glsl  atlas_text_f.glsl  generic_f.glsl  generic_v.glsl  grid_f.glsl  grid_v.glsl  postprocess_f.glsl  text_f.glsl  texture_f.glsl  texture_v.glsl
include/glad/: glad.h
